<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">StockMarket</string>
    <string name="btn_newstring">Portfolio</string>
    <string name="lbl_display">Jazzy Stock</string>
    <string name="btn_exitstring">Exit</string>
    <string name="lbl_totaltile">Portfolio</string>
    <string name="lbl_shares">Shares </string>
    <string name="aboutLabelTitle">Shares Portfolio Application</string>
    <string name="aboutcredit">Created by Team NoName | Stewart Taylor | Borislav Borisov | Lyuben Todorov |  Martin Peal |</string>
    <string name="aboutSource">Source Code:</string>
    <string name="aboutLink">https://github.com/Taylore/AC31005-NoName</string>
    <string name="btn_about">About</string>
    <string name="lbl_alertbtn">Alert</string>
    <string name="lbl_performancebtn">Performance Summary</string>
    <string name="alert_tile">Alert</string>
</resources>
