<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent" android:padding="30dip"
    android:orientation="horizontal" >
    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_gravity="center" android:layout_height="fill_parent" android:weightSum="1">
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="104dp">
            <TextView android:textSize="38.5sp" android:textColor="#AFC7E8" android:layout_marginBottom="25dip" android:id="@+id/lbl_Display" android:text="@string/lbl_display" android:layout_gravity="center" android:layout_width="206dp" android:layout_height="63dp"></TextView>
            <ImageView android:id="@+id/imageView1" android:layout_width="fill_parent" android:layout_weight="1.03" android:layout_height="wrap_content" android:src="@drawable/icon"></ImageView>
        </LinearLayout>

        <Button
            android:id="@+id/btn_portfolio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_newstring"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_alert"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_alertbtn"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_performance "
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_performancebtn" 
            android:textSize="20sp"/>

        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/btn_about" android:id="@+id/btn_about" android:textSize="28sp"></Button>
        <Button android:layout_height="wrap_content" android:id="@+id/btn_exit" android:layout_width="fill_parent" android:text="@string/btn_exitstring" android:textSize="28sp"></Button>
    </LinearLayout>
</ScrollView>