<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent" android:padding="30dip"
    android:orientation="horizontal" >
    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_gravity="center" android:layout_height="308dp">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="fill_parent" android:layout_gravity="top" android:id="@+id/lbl_aboutTitle" android:text="@string/aboutLabelTitle" android:layout_height="86dp"></TextView>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/aboutcredit"></TextView>
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/aboutSource" android:layout_width="wrap_content"></TextView>
            <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:id="@+id/textView3" android:text="@string/aboutLink" android:layout_width="wrap_content"></TextView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>